WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302439
[Site Isolation] [macOS] UI Process may crash during gesture event handling for cross-origin frames.
https://bugs.webkit.org/show_bug.cgi?id=302439
Summary
[Site Isolation] [macOS] UI Process may crash during gesture event handling f...
Lily Spiniolas
Reported
2025-11-12 18:56:42 PST
rdar://164432967
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-11-12 19:11:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53853
EWS
Comment 2
2025-11-17 11:01:35 PST
Committed
303122@main
(32f678793901): <
https://commits.webkit.org/303122@main
> Reviewed commits have been landed. Closing PR #53853 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug