[Site Isolation] [macOS] UI Process may crash during gesture event handling for cross-origin frames. https://bugs.webkit.org/show_bug.cgi?id=302439 rdar://164432967

Reviewed by NOBODY (OOPS!).

Previously, a race condition could cause the UI process to crash when processing gesture
events due to a mismatch between the type passed to `WebPageProxy::didReceiveEvent` and
the event type of the first event in the gesture event queue. Resolve this issue by
waiting for the web process to handle each gesture event before sending the next one,
just like we do for mouse events.

* Source/WebKit/Platform/Logging.h:
* Source/WebKit/Shared/WebEvent.serialization.in:
* Source/WebKit/Shared/WebEventConversion.h:
* Source/WebKit/Shared/WebEventType.h:
* Source/WebKit/Shared/mac/WebGestureEvent.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::removeOldRedundantEvent):
(WebKit::WebPageProxy::handleMouseEvent):
(WebKit::WebPageProxy::processNextQueuedGestureEvent):
(WebKit::WebPageProxy::handleGestureEvent):
(WebKit::WebPageProxy::gestureEventHandlingCompleted):
(WebKit::WebPageProxy::didReceiveEvent):
(WebKit::WebPageProxy::resetStateAfterProcessExited):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/UIProcess/WebPageProxyInternals.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/WebPage/EventDispatcher.messages.in:
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/WebPage.messages.in: