Source/WebKit/Shared/WebEventConversion.h
@@ -46,7 +46,7 @@ namespace WebKit {
 class WebMouseEvent;
 class WebWheelEvent;
 class WebKeyboardEvent;
-enum class WebEventType : uint8_t;
+enum class WebEventType : uint32_t;
 enum class WebMouseEventButton : int8_t;
 
 #if ENABLE(TOUCH_EVENTS)
